crates/sui-prover/tests/snapshots/multiple_specs/double_context_2.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 303
expression: output
---
exiting with bytecode transformation errors
error: Duplicate target function: foo
   ┌─ tests/inputs/multiple_specs/double_context_2.fail.move:17:3
   │  
17 │ ╭   public fun foo_spec() {
18 │ │     foo();
19 │ │     ensures(true);
20 │ │   }
   │ ╰───^
